--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,10 @@
 @import url('./preset.css');
-
+@font-face {
+    font-family: 'Raleway';
+    src: url('../src/assets/fonts/Raleway/Raleway-VariableFont_wght.ttf') format("truetype");
+    font-weight: 400;
+    font-style: normal;
+}
 :root {
     --primary-dark: #222831;
     --secondary-dark: #393E46;
@@ -11,7 +16,8 @@
 
 html {
     height: 100vh;
-    font-family: "Roboto", sans-serif;
+    font-family: "Raleway", sans-serif;
+    letter-spacing: 1px;
     font-size: 12px;
 }
 h1, h2, h3, h4, h5, h6 {
