--- a/src/preset.css
+++ b/src/preset.css
@@ -16,6 +16,7 @@ time, mark, audio, video {
     border: 0;
     font: inherit;
     font-size: 100%;
+    font-variant-numeric: lining-nums;
     vertical-align: baseline;
     box-sizing: border-box;
 }
@@ -25,7 +26,7 @@ footer, header, hgroup, menu, nav, section {
     display: block;
 }
 body {
-    line-height: 1;
+    line-height: 1.2;
 }
 ol, ul {
     list-style: none;
