--- a/src/styles.css
+++ b/src/styles.css
@@ -14,22 +14,22 @@
     --text-secondary-dark: #D7E4D4;
 }
 
-html {
-    height: 100vh;
-    font-family: "Raleway", sans-serif;
-    letter-spacing: 1px;
-    font-size: 12px;
-}
-h1, h2, h3, h4, h5, h6 {
-    color: var(--text-accent-dark);
-}
-h1 {font-size: 14px}
-h2 {font-size: 12px}
-h3 {font-size: 10px}
-h4 {font-size: 8px}
-p {
-    color: var(--text-secondary-dark);
-}
+/*html {*/
+/*    height: 100vh;*/
+/*    font-family: "Raleway", sans-serif;*/
+/*    letter-spacing: 1px;*/
+/*    font-size: 12px;*/
+/*}*/
+/*h1, h2, h3, h4, h5, h6 {*/
+/*    color: var(--text-accent-dark);*/
+/*}*/
+/*h1 {font-size: 14px}*/
+/*h2 {font-size: 12px}*/
+/*h3 {font-size: 10px}*/
+/*h4 {font-size: 8px}*/
+/*p {*/
+/*    color: var(--text-secondary-dark);*/
+/*}*/
 
 
 
