style: PlaceForm & ImageUpload

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@
 :root {
     --primary-dark: #222831;
     --secondary-dark: #393E46;
+    --secondary-medium: #5b5f6d;
     --third-dark: #616F39;
     --accent-dark: #A7D129;
     --text-accent-dark: #90DCB3;
